# pdf-context

./: README.md  pyproject.toml
pdf_context/: app.py
pdf_context/utils/: _validation.py  config.json
